# openlab

./: .gitignore  README.md
appli/examples/: CMakeLists.txt
appli/setups/: CMakeLists.txt  hush.c  manual.c
drivers/: CMakeLists.txt  can.h  gpio.h  timer.h
drivers/stm32/: can.c  can_.h  can_registers.h  timer.c
drivers/stm32f4xx/: gpio.c  gpio_.h  stm32f4xx.c  stm32f4xx.h
lib/: CMakeLists.txt  attitudeController.h  boot_log.h  circular_buff.h  cli.h  derivative.h  hush.h  integrate.h
lib/attitudeController/: attitudeController.c  pitch.h  roll.h  yaw.h
lib/circularbuffer/: circular_buff.c
lib/cli/: _commands.c  _commands.h  cli.c
lib/datastore/: types.h
lib/differential/: derivative.c  integrate.c
lib/hush/: _commands.c  _commands.h  cli.c  hush.c
patches/: apps.patch  attitude.patch  behemoth.patch  boreas.patch  can.patch  cbuf.patch  diff.patch  gx3.patch  hush.patch  lis302dl.patch  motors.patch  rc.patch  test_apps.patch  timer1.patch  tlc59116.patch  vn200.patch
periph/: CMakeLists.txt  datalink.h  gx3.h  motors.h  rc.h  tlc59116.h  vn200.h
periph/datalink/: datalink.c
periph/gx3/: gx3_.h  gx3_msg.h
periph/lis302dl/: lis302dl.c  lis302dl_.h  lis302dl_regs.h
periph/motors/: motors.c
periph/rc/: rc.c
periph/tlc59116/: tlc59116.c  tlc59116_regs.h
periph/vn200/: vn200.c  vn200_commands.c  vn200_commands.h  vn200_parser.c  vn200_parser.h
platform/behemoth/: CMakeLists.txt  behemoth_button.c  (+1 more)
platform/boreas/: CMakeLists.txt  boreas_drivers.c  boreas_periph.c  button.c  drivers.c  periph.c
tools/: 99-openocd.rules
(+27 files in other folders)
